# collab

./: .gitignore  COLLAB_STABILIZATION_OVERVIEW.md  README.md  REMAINING_STABILIZATION_STEPS.md  features - bugs.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
docs/: flatpak.md  linux-install.md
flatpak/: build-in-flatpak.sh  build-local.sh  com.azazel.collab.desktop  com.azazel.collab.metainfo.xml  com.azazel.collab.yml
scripts/: build.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  test_support.rs
src-tauri/src/commands/: collab.rs  crypto.rs  files.rs  index.rs  mod.rs  templates.rs  ui.rs  update.rs  vault.rs  watcher.rs  web.rs
src-tauri/src/models/: collab.rs  mod.rs  note.rs  presence.rs  template.rs  vault.rs
src-tauri/src/state/: app_state.rs
src/contexts/: DragContext.tsx
src/lib/: browserCompat.test.ts  browserCompat.ts  collabTransport.ts  documentSession.test.tsx  documentSession.ts  editorToolbarActions.ts  frontmatter.test.ts  frontmatter.ts  nerdFontIcons.test.ts  nerdFontIcons.ts  noteAssets.ts  pdfPreview.ts  pdfWorkspace.test.ts  pdfWorkspace.ts  tauri.ts  vaultLinks.test.ts  vaultLinks.ts  webPreviewCache.ts
src/store/: collabStore.ts  editorStore.test.ts  editorStore.ts  gridStore.ts  index.ts  kanbanStore.ts  noteIndexStore.ts  noteSnippetStore.ts  uiStore.ts  updateStore.ts  vaultStore.ts
src/test/: setup.ts
(+192 files in other folders)
